--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.8",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "moment": "^2.24.0",
+    "passport-google-oauth20": "^2.0.0",
     "vue": "^2.6.10",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
