--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-handlebars": "^3.1.0",
     "moment": "^2.24.0",
     "nodemailer": "^6.4.2",
+    "nuxt": "^2.11.0",
     "passport-google-oauth20": "^2.0.0",
     "vue": "^2.6.10",
+    "vue-fixed-header": "^3.2.13",
     "vue-js-modal": "^1.3.31",
     "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
