--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-router": "^3.1.3",
     "vue-router-back-button": "^1.2.3",
     "vue2-simple-calendar": "^1.0.8",
+    "vuetify": "^2.2.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
