--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "dns": "^0.2.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "font-awesome": "^4.7.0",
     "moment": "^2.24.0",
     "nodemailer": "^6.4.2",
+    "nodemon": "^2.0.2",
     "nuxt": "^2.11.0",
     "passport-google-oauth20": "^2.0.0",
     "vue": "^2.6.10",
     "vue-fixed-header": "^3.2.13",
+    "vue-fontawesome-icon": "^1.3.0",
     "vue-js-modal": "^1.3.31",
     "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
@@ -47,7 +50,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.41.2"
