--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "core-js": "^3.3.2",
+    "date-fns": "^2.11.1",
     "dns": "^0.2.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
@@ -31,11 +32,13 @@
     "vue": "^2.6.10",
     "vue-fixed-header": "^3.2.13",
     "vue-fontawesome-icon": "^1.3.0",
+    "vue-headful": "^2.1.0",
     "vue-js-modal": "^1.3.31",
     "vue-moment": "^4.1.0",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-router-back-button": "^1.2.3",
+    "vue-scroll": "^2.1.13",
     "vue2-simple-calendar": "^1.0.8",
     "vuetify": "^2.2.4",
     "vuex": "^3.0.1"
