--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-router": "^3.1.3",
     "vue-router-back-button": "^1.2.3",
     "vue-scroll": "^2.1.13",
+    "vue-toasted": "^1.1.28",
     "vue2-simple-calendar": "^1.0.8",
     "vuetify": "^2.2.4",
     "vuex": "^3.0.1"
